Version 1.1.0.1:
- Release date:
- New features:
	- added PosixSignalsWatcher (Unix)
	- CoreApplicationBase: added support for termination signals (Unix + Windows)
	- added test app for termination signals
- Improvements:
	- do not conflict with boost signals
	- zlib dependency is optional (affects QZipReader and QZipWriter)
	- CoreApplicationBase::SetInfo(): added componentName
- Fixed bugs:
	- fixed enabling GCC/Clang C++11 and extensions


Version 1.0.9.1:
- Release date: 14 Mar 2018
- New features:
	- added localization test/sample app
- Improvements:
	- localization support review
	- translations
	- verify connect in qt solutions integration
	- updated KSqueezedTextLabel to KF5
	- improved DiskSpaceWidget layout
	- added icon pixmap to MessageBox
	- updated qt-solutions
	- CoreApplicationBase::GetSupportedLanguageInfos() use app qm info
	- updated Qt to 5.9.4 on Ubuntu
	- updated boost to 1_66_0
- Fixed bugs:
	- fixed meta type issues in qt solutions integration
	- partial fix for KSqueezedTextLabel rich text


Version 1.0.8.1:
- Release date: 30 Jan 2018
- New features:
	- added GetMountPoints()
- Improvements:
	- filesystem functions quick review
	- android and ios icons
- Fixed bugs:
	- added GetMountPointsFromPath() missing implementation


Version 1.0.7.1: 18 Jan 2018
- Release date:
- New features:
- Improvements:
	- qt 4 and qt 5: fixed support for qt static builds, static qico plugin, translations
- Fixed bugs:


Version 1.0.6.1:
- Release date: 7 Jan 2018
- New features:
	- added CallTraits
	- added Factory
- Improvements:
- Fixed bugs:
	- fixed Optional test


Version 1.0.5.1:
- Release date: 15 Dec 2017
- New features:
	- added Any
	- added future errc
	- added Optional
- Improvements:
	- this_thread Yield(), SleepFor() and SleepUntil() available even if !CPPDEVTK_HAVE_THREAD_STORAGE
	- removed unnecessary exceptions
	- exception classes in separate files
	- exception propagation: added parameter to terminate or return null on failure