@@ -4,6 +4,7 @@ Version 1.1.0.1:
 	- added PosixSignalsWatcher (Unix)
 	- CoreApplicationBase: added support for termination signals (Unix + Windows)
 	- added test app for termination signals
+	- added GetCurrentProcessId()
 - Improvements:
 	- do not conflict with boost signals
 	- zlib dependency is optional (affects QZipReader and QZipWriter)
